--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,10 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  username: <%= ENV['MYSQL_USERNAME'] || 'root' %>
+  password: <%= ENV['MYSQL_PASSWORD'] || '' %>
+  host: <%= ENV['MYSQL_HOST'] || 'localhost' %>
+  port: 3306
 
 development:
   <<: *default
@@ -50,5 +51,7 @@ test:
 production:
   <<: *default
   database: tutor_match_production
-  username: tutor_match
-  password: <%= ENV['TUTOR_MATCH_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
+  host: localhost
